# amplifier-app-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_CHANGES.md  AUTHENTICATION_DESIGN.md  COMPLETE_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  Dockerfile  GITHUB_AUTH_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  PROGRESS_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTOR_REVIEW.md  SESSION_4_SUMMARY.md  SESSION_SUMMARY.md  SETUP.md  TESTING.md  TODAYS_WORK.md  docker-compose.prod.yml  docker-compose.yml  manual_test_configs.py  openapi_spec.json  openapi_updated.json  pyproject.toml  run-dev.sh  run-tests.sh  test-docker.ps1  test_config_logic.py  test_telemetry.py
.github/workflows/: amplifier-api-AutoDeployTrigger-3531530b-f061-4841-8df4-caa604d5e099.yml  ci-cd.yml
amplifier_app_api/: __init__.py  config.py  main.py
amplifier_app_api/api/: __init__.py  applications.py  bundles.py  config.py  health.py  providers.py  recipes.py  sessions.py  smoke.py  tools.py
amplifier_app_api/core/: __init__.py  config_manager.py  config_validator.py  recipe_manager.py  secrets_encryption.py  session_manager.py  tool_manager.py
amplifier_app_api/middleware/: __init__.py  auth.py
amplifier_app_api/models/: __init__.py  application.py  config.py  recipe.py  requests.py  responses.py  session.py  user.py
amplifier_app_api/storage/: __init__.py  database.py  migrations.py  schema.py
amplifier_app_api/telemetry/: __init__.py  config.py  context.py  dev_logger.py  events.py  middleware.py  tracker.py
amplifier_app_api/validators/: __init__.py  recipe.py
amplifier_app_utils/: __init__.py  app_settings.py  config_resolver.py  effective_config.py  main.py  module_manager.py  provider_manager.py  session_spawner.py
amplifier_app_utils/api/: bundles.py  health.py  sessions.py  smoke.py
amplifier_app_utils/core/: __init__.py  config_manager.py
amplifier_app_utils/models/: __init__.py  responses.py  session.py
amplifier_foundation/: __init__.py  app_settings.py  module_manager.py  provider_loader.py  provider_manager.py
docs/: API_REFERENCE.md  AUTHENTICATION_DESIGN.md  AZURE_DATABASE_MIGRATION_PLAN.md  CLEANUP_SUMMARY.md  CONFIG_API.md  CONFIG_ENCRYPTION.md  DEPENDENCY_MANAGEMENT.md  DOCUMENTATION_INDEX.md  ENCRYPTION_FLOW.md  ENCRYPTION_GUIDE.md  ENVIRONMENT_STRATEGY.md  HELPER_ENDPOINTS_REMOVAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  MANUAL_TESTING_GUIDE.md  POSTGRESQL_MIGRATION_SUMMARY.md  RECIPES.md  RECIPE_TEST_COVERAGE.md  REGISTRY_API.md  SETUP.md  TELEMETRY_PLAN.md  TELEMETRY_TESTING.md  TESTING.md  TESTING_AUTHENTICATION.md  TEST_COVERAGE_SUMMARY.md
docs/examples/: encryption_example.py
examples/: README.md  agent_delegation.py  custom_provider.py  minimal_repl.py
local_tools/: test-deploy.ps1
scripts/: run-dev.sh  run_encryption_tests.bat  run_encryption_tests.sh  test-deploy.ps1  test-docker.ps1
tests/: README.md  __init__.py  conftest.py  test_api.py  test_app_settings.py  test_applications.py  test_auth_integration.py  test_auth_middleware.py  test_bundles_complete_e2e.py  test_bundles_comprehensive.py  test_config_api_e2e.py  test_config_comprehensive.py  test_config_decrypt_api.py  test_config_manager_comprehensive.py  test_config_resolver.py  test_config_validator_comprehensive.py  test_configs_crud.py  test_database.py  test_database_participants_comprehensive.py  test_e2e_all_endpoints.py  test_e2e_live_service.py  test_effective_config.py  test_encryption.py  test_health_comprehensive.py  test_integration_config_session.py  test_integration_flows.py  test_key_manager.py  test_live_8765.py  test_live_8765_comprehensive.py  test_mention_loading.py  test_models.py  test_module_manager.py  test_new_architecture.py  test_paths.py  test_project_utils.py  test_provider_manager.py  test_provider_sources.py  test_recipe_api.py  test_recipe_manager.py  test_recipe_validation.py  (+15 more)
