[project]
name = "amplifier-app-api"
version = "0.3.0"
description = "REST API service for Amplifier AI development platform"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Organization" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0.0",
    # Amplifier core components
    "amplifier-core",
    "amplifier-foundation",  # Includes orchestrators, context managers, and common tools
    # Pre-install provider modules (not included in foundation)
    "amplifier-module-provider-anthropic",
    "amplifier-module-provider-openai",
    "amplifier-module-provider-azure-openai",
    "amplifier-module-provider-gemini",
    "amplifier-module-provider-ollama",
    "amplifier-module-provider-vllm",
    # Telemetry
    "opencensus-ext-azure>=1.1.13",
    "azure-identity>=1.25.1",
    # Provider SDK dependencies
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.4.0",
    "boto3>=1.35.0",
    "cohere>=5.0.0"
]

[project.scripts]
amplifier-service = "amplifier_app_api.main:main"

[tool.uv]
package = true
# Override all module dependencies to use canonical URLs (without .git suffix)
# This prevents conflicts when modules specify different URL formats
override-dependencies = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "amplifier-foundation @ git+https://github.com/microsoft/amplifier-foundation@main",
    "amplifier-module-provider-anthropic @ git+https://github.com/microsoft/amplifier-module-provider-anthropic@main",
    "amplifier-module-provider-openai @ git+https://github.com/microsoft/amplifier-module-provider-openai@main",
    "amplifier-module-provider-azure-openai @ git+https://github.com/microsoft/amplifier-module-provider-azure-openai@main",
    "amplifier-module-provider-gemini @ git+https://github.com/microsoft/amplifier-module-provider-gemini@main",
    "amplifier-module-provider-ollama @ git+https://github.com/microsoft/amplifier-module-provider-ollama@main",
    "amplifier-module-provider-vllm @ git+https://github.com/microsoft/amplifier-module-provider-vllm@main",
]

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_api"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.uv.sources]
# All components point to @main - locked at Docker build time
# Note: Using URLs without .git suffix for consistency with module dependencies
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }
amplifier-module-provider-anthropic = { git = "https://github.com/microsoft/amplifier-module-provider-anthropic", branch = "main" }
amplifier-module-provider-openai = { git = "https://github.com/microsoft/amplifier-module-provider-openai", branch = "main" }
amplifier-module-provider-azure-openai = { git = "https://github.com/microsoft/amplifier-module-provider-azure-openai", branch = "main" }
amplifier-module-provider-gemini = { git = "https://github.com/microsoft/amplifier-module-provider-gemini", branch = "main" }
amplifier-module-provider-ollama = { git = "https://github.com/microsoft/amplifier-module-provider-ollama", branch = "main" }
amplifier-module-provider-vllm = { git = "https://github.com/microsoft/amplifier-module-provider-vllm", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
markers = [
    "e2e: End-to-end tests with real HTTP server (slow)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
